fix scrollbar overflow issues

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 #passScrollbarContainer {
 	border: 2px solid black;
 	width: 15vw;
-	height: 48vw;
+	height: 58vw;
 	font-family: 'Quantico';
 	background-color: #007DC3;
 
@@ -69,7 +69,7 @@
 	
 	width: 100%;
 	height: 94%;
-	margin-top: 3%;
+	margin-top: 4%;
 	padding: 1%;
 }
 
